--- a/Develop/package.json
+++ b/Develop/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm start",
+    "start": "node server.js",
     "watch": "nodemon server.js",
-    "lint": "npx eslint ."
+    "seed": "node seeds/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,18 +17,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "nodemon": "^2.0.1",
-    "prettier": "^1.19.1"
+    "nodemon": "^2.0.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.7"
   }
 }
