--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "kill -9 $(lsof -ti:3000,3001) && npm start",
     "watch": "nodemon server.js",
     "seed": "node seeds/index.js"
   },
@@ -22,9 +22,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "insomnia": "^0.0.1",
     "mysql2": "^2.2.5",
-    "npm": "^8.5.5",
-    "sequelize": "^5.22.3"
+   
+    "sequelize": "^5.22.5"
   }
 }
