--- a/Develop/package.json
+++ b/Develop/package.json
@@ -20,9 +20,10 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.7"
+    "dotenv": "^8.6.0",
+    "express": "^4.18.2",
+    "mongoose": "^6.8.3",
+    "mysql2": "^2.3.3",
+    "sequelize": "^5.22.5"
   }
 }
